# React-Python-Login-Admin

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
backend/alembic/: .gitkeep  env.py  script.py.mako
backend/alembic/versions/: 0001_auth_users_employee_audit.py  0002_ai_chat_rag_mcp_agents.py  0002_audit_logs_add_compliance_cols.py  0003_admin_ai_providers_models.py  0003_ai_models_default_per_type_uidx.py
backend/app/: __init__.py  main.py  worker.py
backend/app/admin/: __init__.py  _audit.py  _usage_aggregator.py  usage.py
backend/app/admin/audit/: __init__.py  audit.py  repository.py  router.py  schemas.py  service.py
backend/app/admin/model_catalog/: __init__.py  audit.py  errors.py  repository.py  router.py  schemas.py  service.py
backend/app/admin/model_test/: __init__.py  audit.py  errors.py  repository.py  router.py  schemas.py  service.py
backend/app/admin/providers/: __init__.py  audit.py  repository.py  router.py  schemas.py  service.py
backend/app/agents/: __init__.py  _executor.py  audit.py  deepagents_runtime.py  errors.py  repository.py  repository_agents.py  repository_runs.py  router.py  router_agents.py  router_runs.py  routing.py  schemas.py  service.py  service_bind_tools.py  service_list.py  service_start_run.py  service_start_run_persistence.py  service_start_run_tools.py  specs.py
backend/app/agents/tools/: __init__.py  admin_tool.py  mcp_tool.py  rag_tool.py
backend/app/api/: __init__.py  router.py
backend/app/auth/: __init__.py  domain.py  errors.py  mfa.py  mfa_crypto.py  password.py  rate_limit.py  repository.py  reset_tokens.py  router.py  schemas.py  service.py  tokens.py
backend/app/auth/repositories/: __init__.py  mfa.py  password_reset.py  refresh.py
backend/app/auth/routers/: __init__.py  _helpers.py  forgot_reset.py  logout.py  mfa.py  refresh.py  sign_in.py  sign_up.py
backend/app/auth/services/: __init__.py  logout.py  logout_audit.py  mfa.py  password_reset_consume.py  password_reset_request.py  refresh.py  refresh_audit.py  sign_in.py  sign_up.py
backend/app/chat/: __init__.py  cursor.py  errors.py  schemas.py
backend/app/chat/repositories/: __init__.py  conversations.py
backend/app/chat/routers/: __init__.py  _helpers.py  conversations.py
backend/app/chat/services/: __init__.py  create_conversation.py  get_conversation_detail.py  list_conversations.py
backend/app/chat/streaming/: __init__.py  model_selector.py  persistence.py  router.py  schemas.py  service.py  sse.py
backend/app/core/: __init__.py  config.py  db.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/models/: __init__.py  admin_ai.py  agents.py  auth.py  base.py  chat.py  mcp.py  rag.py  user.py
backend/app/features/: __init__.py
backend/app/features/admin_ai/: __init__.py  provider_clients.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/auth/: __init__.py  errors.py  mfa_repository.py  mfa_routes.py  mfa_service.py  repository.py  routes.py  schemas.py  service.py
backend/app/graphs/: __init__.py  checkpointer.py  workflows.py
backend/app/llm_gateway/: __init__.py  complete_chat.py  errors.py  litellm_client.py
backend/app/mail/: __init__.py  mailer_base.py  outbox.py  outbox_mailer.py  resend_mailer.py  smtp_mailer.py
backend/app/mail/templates/: reset_password_en.html  reset_password_en.txt  (+4 more)
backend/app/mcp/: __init__.py  audit.py  client.py  client_handshake.py  errors.py  repository.py  repository_servers.py  repository_tools.py  router.py  router_servers.py  router_tools.py  schemas.py  service.py  service_register.py  service_sync.py  service_update_tool.py
backend/app/rag/: __init__.py  errors.py  retriever.py  schemas.py
backend/app/security/: __init__.py  _redis_client.py  encryption.py  errors.py  permissions.py  rate_limit.py
backend/app/seeds/: __init__.py  _pdf_minimal.py  bootstrap_verification_data.py  io.py  table_probe.py
backend/app/users/: __init__.py  audit.py  deps.py  errors.py  schemas.py
backend/app/verification_data/: __init__.py  __main__.py  bootstrap.py  crypto.py  groups.py  loader.py  loader_ai_tables.py  loader_base.py  redaction.py  schemas.py
backend/app/workers/: __init__.py  _helpers.py  _storage.py  tasks_documents.py  tasks_embeddings.py
backend/tests/: .gitkeep  __init__.py  conftest.py  test_dependency_smoke.py  test_health.py  test_logging.py  test_migrations_0002_ai_chat_rag_mcp.py
backend/tests/ai/: __init__.py  conftest.py  test_agents_smoke.py  test_rag_retriever.py
backend/tests/integration/: __init__.py  conftest.py  test_admin_ai.py  test_admin_ai_discover_models.py  test_audit_endpoint.py  test_audit_logs_compliance_cols.py  test_auth_logout.py  test_auth_mfa_enroll.py  test_auth_migration.py  test_auth_refresh.py  test_auth_signin.py  test_auth_signup.py  test_chat_conversations.py  test_chat_stream.py  test_chat_stream_unit_sse.py  test_chat_streaming_live.py  test_db_engine_no_secret_leak.py  test_dev_restart_reset.py  test_health_ready.py  test_mcp_registry.py  test_mcp_sync_unreachable.py  test_mfa.py  test_migrations_0001_auth.py  test_model_test.py  test_password_reset.py  test_rag_collections.py  test_rag_documents_index.py  test_rag_documents_list.py  test_rag_documents_upload.py  test_seed_admin_ai_loader.py  test_seed_idempotency.py  test_seed_loader_after_migration.py  test_seed_missing_bundle.py  test_seed_namespaces.py  test_seed_productive_bundle.py  test_signup_no_argon2_hash_in_logs.py  test_users_me.py  test_vectorization_worker.py  test_verification_data_admin_ai_bootstrap.py  test_verification_data_bootstrap.py
backend/tests/unit/: __init__.py  conftest.py  test_auth_tokens.py  test_gen_dev_secrets.py  test_llm_gateway_complete_chat.py  test_llm_gateway_litellm_client.py  test_security.py  test_verification_data_admin_ai_loaders.py
(+2993 files in other folders)
